# crawl4ai-mcp

./: ._.pytest_cache  .___pycache__  IMPLEMENTATION_PLAN.md  README.md  cursor_extract_pricing_tiers_from_aurac.md  main.py  pyproject.toml  pytest.ini
tests/: .___pycache__  __init__.py  conftest.py  test_adaptive_crawling.py  test_performance.py  test_utils.py
tools/: .___pycache__  cache_manager.py  config.py  crawl.py  crawl_context.py  diagnostics.py  error_handler.py  link_selector.py  llm_decisions.py  mcp_sampler.py  relevance_scorer.py  research.py  scrape.py  session_manager.py  summarise.py  utils.py
