[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.5.0.post8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[tool.uv.sources]
crawl4ai = { git = "https://github.com/unclecode/crawl4ai.git", rev = "2025-MAR-ALPHA-1" }
