[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx[test]>=0.28.1",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
# Temporarily use PyPI version to avoid git source compilation issues
# crawl4ai = { git = "https://github.com/unclecode/crawl4ai.git", rev = "2025-MAR-ALPHA-1" }
